Update links and image sources in E-101.html

--- a/E-101.html
+++ b/E-101.html
@@ -12,29 +12,29 @@
 <body>
   <header>
     <h1 id="web_title">E-101</h1>
-    <img src="/Images/E-101.png!sw800"
+    <img src="E-101.png!sw800"
       alt="An icon of a book." title="E-101 Icon" width="95px" class="img"/>
     <nav id="nav_menu">
       <section class="left_nav">
-        <a href="/About Page/about.html" title="Click here to find out more about me!">
+        <a href="about.html" title="Click here to find out more about me!">
           <img src="/Images/About_me.png" alt="An image leading to an about me page" class="about_img">
           <div class="about_msg">About Me</div>
         </a>
 
-        <a href="/Review Page/support.html" title="Support me by leaving reviews!">
+        <a href="support.html" title="Support me by leaving reviews!">
           <img src="/Images/review.png" alt="An image leading to a review page" class="review_img">
           <div class="review_msg">Leave a Review</div>
         </a>
       </section>
 
       <section class="right_nav">
-        <a href="/Others Page/other_web.html" title="Visit here to see other websites I've made!">
+        <a href="other_web.html" title="Visit here to see other websites I've made!">
           <img src="/Images/Others.png" alt="An image leading to a page of other websites" class="others_img">
           <div class="others_msg">Other Websites</div>
         </a>
 
-        <a href="/Admin Page/admin_panel.html" title="For admin ONLY!">
-          <img src="/Images/Admin_Only.png" alt="An image leading to an admin panel" class="admin_img">
+        <a href="admin_panel.html" title="For admin ONLY!">
+          <img src="Admin_Only.png" alt="An image leading to an admin panel" class="admin_img">
           <div class="admin_msg">Admin Panel</div>
         </a>
       </section>
